2008-10-30  Willie Walker <william.walker@sun.com>

	* configure.in,
	  www.gnome.org/projects/accessibility/talks:
	  Add talks directory.

        * www.gnome.org/projects/accessibility/*.html:
          Clean up titles and also fix up the about page.

2008-10-28  Willie Walker <william.walker@sun.com>

        * configure.in,
          www.gnome.org/projects/accessibility:
          Add accessibility pages.

        * www.gnome.org/about/index.html:
          Point to new accessibility projects page.

2008-10-24  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Remove E-D-S documentation from AC_OUTPUT.

2008-10-24  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: remove Boston Summit and Asia Summit.

2008-10-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  populate the cheese 2.24.1 release

2008-10-07  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/index.wml: 
	  populate the speckhackfest on the gnome.org frontpage

2008-10-06  Andre Klapper  <a9016009@gmx.de>

	* www.gnome.org/start/schedule-unstable.ics: 
	  Upload 2.25 schedule ics

2008-10-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/devtools/Makefile.am: 
	  add the missing Makefile to devtools, which failed previously

2008-10-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/index.wml: 
	  undo changes on the frontpage which should not have been
	  committed, sorry guys

2008-10-04  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/index.wml,
	  www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  remove the html suffix from the cheese page links

2008-09-30  Dave Neary  <dneary@gnome.org>

	* www.gnome.org/mobile/index.wml
	* www.gnome.org/mobile/archmap.css: Update the links after updating
	the architecture graphic. Should have done this before: oops.
