@@ -111,8 +111,8 @@
           our <a href="screencasts.html">screencasts</a> that
           demonstrate a subset of the GNOME Accessibility
           features.</p>
-	  <p>We've also given a number
-	  of <a href="talks/talks.html">talks</a> over the years.</p>
+	  <p>We've also created a number
+	  of <a href="talks/talks.html">articles and talks</a> over the years.</p>
         </div>
 
         <div class="quarter">
