@@ -227,7 +227,7 @@ dd {
   background-color: transparent;
   font-family: "trebuchet ms", verdana, helvetica, arial, sans-serif;
   font-size: 145%;
-  text-decoration: none;
+  #text-decoration: none;
   margin: 0;
   padding: 1ex 0 0 0;
   display: block;
