@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../prosimii/prosimii-screen.css" media="screen, tv, projection" title="Default" />
     <link rel="stylesheet alternative" type="text/css" href="../prosimii/prosimii-print.css" media="screen" title="Print Preview" />
     <link rel="stylesheet" type="text/css" href="../prosimii/prosimii-print.css" media="print" />
-    <title>GNOME Accessibility - Talks</title>
+    <title>GNOME Accessibility - Articles and Talks</title>
     <link rel="icon" type="image/png" href="images/logo.png" />
   </head>
 
@@ -27,9 +27,9 @@
       </div>
 
       <div class="midHeader">
-        <h1 class="headerTitle">GNOME Accessibility - Talks</h1>
+        <h1 class="headerTitle">GNOME Accessibility - Articles and Talks</h1>
         <div class="headerSubTitle">
-          Past talks about GNOME Accessibility
+          Articles and Talks about GNOME Accessibility
         </div>
         <br class="doNotDisplay doNotPrint"/>
       </div>
@@ -51,6 +51,30 @@
         <!-- ##### Main Content ##### -->
 
         <div class="twoThirds noBorderOnLeft">
+	  <h1>Articles</h1>
+	  <ul>
+	    <li><a href="http://www.linux.com/feature/130942">Orca
+	    accessibility app makes a whale of an impact</a>, Bruce
+	    Byfield, Linux.com, April 07, 2008</li>
+	    <li><a href="http://www.linuxjournal.com/article/9978">Orca -- Take
+	    the Killer Whale for a Ride</a>, Willie Walker, Linux
+	    Journal, March 2008</li>
+	    <li><a href="http://www.linuxjournal.com/article/9991">Make
+	    Your Application Accessible with Accerciser</a>, Eitan
+	    Isaacson, Linux Journal, March 2008</li>
+	    <li><a href="http://www.linux.com/feature/129742">GNOME
+	    2.22 focuses on utilities and standard applications</a>,
+	    Bruce Byfield, Linux.com, March 17, 2008</li>
+	    <li><a href="http://www.linux.com/feature/127801">GNOME
+	    focuses on accessibility -- with a little help from
+	    Mozilla and others</a>, Bruce Byfield, Linux.com, February
+	    27, 2008</li>
+            <li><a href="http://live.gnome.org/Accessibility/PythonPoweredAccessibility">
+            Python Powered Accessibility</a>, Steve Lee, Python
+            Magazine, December 2008</li>
+	  </ul>
+
+	  <h1>Talks</h1>
 	  <h3>GNOME.Asia; October 18-19, 2008</h3>
 	  <ul>
 	    <li><a href="2008-10-18-GNOME.Asia.odp">GNOME Accessibility Overview</a></li>
@@ -61,6 +85,11 @@
 	    <li><a href="GUAD3C/keynote/start.html">GNOME Accessibility: Are We There Yet?</a></li>
 	    <li><a href="GUAD3C/making-apps-accessible/start.html">Making GNOME Applications Accessible</a></li>
 	  </ul>
+
+          <h3>GUADEC 2004</h3>
+          <ul>
+	    <li><a href="GUADEC-2004.sxi">Making Accessibility Work in 2.8</a></li>
+          </ul>
 
 	  <h3>California State University, Northridge (CSUN)
 	  Conference on Technology and Disabilities; March 2002</h3>
@@ -74,7 +103,7 @@
 	    <li><a href="CSUN-slides-220301.tar.gz">Slightly abridged version of Gnome Accessibility presentation slides (gzipped tarfile)</a></li>
 	  </ul>
 
-	  <h3>GUADEC, Copenhagen, Denmark; April 8, 2001.</h3>
+	  <h3>GUADEC, Copenhagen, Denmark; April 8, 2001</h3>
 	  <ul>
 	    <li><a href="GUADEC/index.html">Making GNOME Accessible [html]</a></li>
 	    <li><a href="guadec.tar.gz">same presentation as gzipped tarfile</a></li>
@@ -86,7 +115,7 @@
 	    <li><a href="http://www.abletv.net/events_gnome_101900_transcript.asp">Meeting transcript</a> courtesy <a href="http://www.abletv.net">AbleTV.net</a></li>
 	    <li><a href="http://www.abletv.net/events_gnome_101900.asp">Meeting webcast</a> courtesy <a href="http://www.abletv.net">AbleTV.net</a></li>
 	  </ul>
-	  
+
         </div>
 
         <!-- ##### Documentation Side Bar ##### -->
