@@ -1,5 +1,14 @@
 2008-10-30  Willie Walker <william.walker@sun.com>
 
+        * www.gnome.org/projects/accessibility/prosimii:
+          Make sure links have underlines.
+
+        * www.gnome.org/projects/accessibility/index.html,
+          www.gnome.org/projects/accessibility/talks/talks.html:
+          Add articles.
+
+2008-10-30  Willie Walker <william.walker@sun.com>
+
 	* configure.in,
 	  www.gnome.org/projects/accessibility/talks:
 	  Add talks directory.
